# notification_service

./: LICENSE  README.md  docker-compose.yml  task.md
api/: Dockerfile  main.py  pyproject.toml
api/db/: config.py  errors.py  sample_data.py  sessions.py
api/repositories/: base.py  customers.py  mailouts.py  messages.py  phone_codes.py  tags.py  timezones.py  users.py
api/routers/: admin.py  customers.py  mailouts.py  messages.py  phone_codes.py  tags.py  timezones.py  users.py  web.py
api/schemas/: __init__.py  base.py  customers.py  link_schemas.py  mailouts.py  messages.py  phone_codes.py  tags.py  timezones.py  tokens.py  users.py
api/services/sender/: celery_worker.py  client.py  mailout.py  metrics.py
api/templates/: index.html  search_results.html
api/templates/admin/: base.html  create_mailout.html  dashboard.html  edit_mailout.html  list_mailouts.html  mailout_create.html  mailouts_list.html  view_mailout_details.html  view_statistics.html
api/tests/: conftest.py
api/tests/test_repositories/: test_customers.py  test_mailouts.py  test_messages.py  test_phone_codes.py  test_tags.py  test_timezones.py  test_users.py
api/tests/test_routers/: test_customers.py  test_home.py  test_mailouts.py  test_messages.py  test_phone_codes.py  test_tags.py  test_timezones.py  test_users.py
api/tests/test_schemas/: test_customers.py  test_mailouts.py  test_messages.py  test_phone_codes.py  test_tags.py  test_timezones.py  test_users.py
api/utils/: logging.py
