[tool.poetry]
name = "mailing_service"
version = "0.1.0"
description = ""
authors = ["Julia Kuznetsova"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pydantic = "^1.10.4"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"
python-multipart = "^0.0.6"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
pytest-cov = "^4.1.0"
prometheus-client = "^0.17.1"
celery = "^5.3.1"
redis = "^4.6.0"
flower = "^2.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
